# cmake-template

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: actions.yml
src/: CMakeLists.txt  asio.cpp  main.cpp  resolver.cpp  sync_client.cpp  sync_server.cpp  test_version.cpp  version.h
src/lib/: lib.cpp  lib.h
tests/: CMakeLists.txt  lib_tests.cpp
