cmake_minimum_required(VERSION 3.23)

if (NOT DEFINED ENV{BUILD_NUMBER})
    set(ENV{BUILD_NUMBER} 1)
endif()

project(CMakeTemplate VERSION 0.0.$ENV{BUILD_NUMBER})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED  ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

message(STATUS "Build: $ENV{BUILD_NUMBER}")

enable_testing()

add_subdirectory(src)
add_subdirectory(tests)